--- a/gestion.Rmd
+++ b/gestion.Rmd
@@ -4,7 +4,7 @@ author: "Dr. Unai Ganzedo"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   slidy_presentation:
-    footer: "Marine Support<"
+    footer: "Marine Support"
 
 ---
 
