--- a/gestion.Rmd
+++ b/gestion.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "Gestion pesquera desde el punto  de vista empresarial"
-author: "Dr. Unai Ganzedo"
+author: "Dr. Unai Ganzedo Lopez"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   slidy_presentation:
-    footer: "Marine Support<"
+    footer: "Marine Support"
 
 ---
 
